# BitfieldSquareSolver

./: CMakeLists.txt
.github/workflows/: build.yml  cmake-single-platform.yml
include/: benchmark.h  find_biggest_square.h  find_biggest_square_dp.h
src/: find_biggest_square.cpp  find_biggest_square_dp.cpp  main.cpp
test/: CMakeLists.txt  unit_test.cpp
